[tool.poetry]
name = "noiseflow"
version = "0.0.1a9"
description = "An ambient noise package"
authors = ["Fu Yin <oucyinfu@gmail.com>"]
license = "BSD"
readme = "README.md"
include = ["CMakeLists.txt", "cmake/*", ".gitmodules"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24.0"
matplotlib = "^3.7.1"
scipy = "^1.11.0"
obspy = "^1.4.0"
stockwell = "^1.1"
setuptools = "^58.0.4"
numba = "^0.57.1"
h5py = "^3.9.0"
tqdm = "^4.65.0"
joblib = "^1.2.0"
tslearn = "^0.5.3.2"
faker = "^18.11.2"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
numpy = "^1.24.0"
scipy = "^1.11.0"
matplotlib = "^3.7.1"
setuptools = "^58.0.4"

[tool.poetry.extras]
cpp = ["fftw"]

[build-system]
requires = ["poetry-core", "setuptools", "numpy", "cmake"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
# The allows us to build C/C++/Fortran extensions, unstable feature now.
script = "build.py"
generate-setup-file = true