[tool.poetry]
name = "noiseflow"
version = "0.0.1a9"
description = "An ambient noise package"
authors = ["Fu Yin <oucyinfu@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
include = ["CMakeLists.txt", "cmake/*", ".gitmodules"]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Environment :: Console",
        "Environment :: GPU",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Operating System :: OS Independent",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Topic :: Scientific/Engineering",
        "Topic :: Scientific/Engineering :: Physics",
    ]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.24.0"
matplotlib = "^3.7.1"
scipy = "^1.11.0"
obspy = "^1.4.0"
stockwell = "^1.1"
setuptools = "^58.0.4"
numba = "^0.57.1"
h5py = "^3.9.0"
tqdm = "^4.65.0"
joblib = "^1.2.0"
tslearn = "^0.5.3.2"
faker = "^18.11.2"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
coverage = "^6.3.2"
pytest = "^7.1.1"
autopep8 = "^1.6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^4.5.0"
pydata-sphinx-theme = "^0.8.1"
sphinx-autoapi = "^1.8.4"
jupyter-sphinx = "^0.3.2"
sphinx-copybutton = "^0.5.0"

[tool.poetry.extras]
cpp = ["fftw"]

[build-system]
requires = ["poetry-core", "setuptools", "numpy", "cmake"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
# The allows us to build C/C++/Fortran extensions, unstable feature now.
script = "build.py"
generate-setup-file = true